2014-03-07  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-14-09
        * Fix segmentation fault (ATLASRECTS-781) due to theresholds configuration changes

2014-03-07  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-14-08
        * Fix compilation errors due to Jet changes.

2013-12-06  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-14-07
        * New monitoring base class updates.

2013-06-03  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-14-06
        * Update mainpage doc.

2013-05-31  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-14-05
        * Mods to reduce cpu time.

2013-05-29  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-14-04
        * Update mainpage doc.

2013-05-24  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-14-03
        * Updates for cpu time monitoring.

2013-05-14  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-14-02
        * Reduce cpu time of some tools.

2013-04-22  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-14-01
        * More doxygen updates.

2013-04-10  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-14-00
        * Update Doxygen documentation and some code cleanup.

2012-12-18  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-13-12
        * Skip simulation checks for events with ROB errors.
        * (-00-13-11 jhofmann: adding JO to control usage of CaloQuality cut)

2012-11-06  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-13-10
        * Reduce cpu time of some tools.

2012-10-26  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-13-09
        * Fix gcc46 compiler warnings.
